# seames-server

./: Cargo.toml  README.md
migrations/2023-04-12-015537_create_users/: up.sql
migrations/2023-04-18-064554_users/: down.sql  up.sql
src/: db.rs  handlers.rs  main.rs  schema.rs
src/helpers/: auth.rs  errors.rs  mod.rs  validate.rs
src/models/: repository.rs  user.rs
src/schemas/: root.rs
src/schemas/user/: error.rs  mod.rs  mutation.rs  query.rs
src/utils/: auth.rs
