[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
argon2 = "0.5.0"
chrono = "0.4.24"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
email_address = "0.2.4"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
juniper = "0.15.11"
lazy_static = "1.4.0"
log = "0.4.17"
nanoid = "0.4.0"
serde = { version = "1.0.160", features = ["derive"] }
